@@ -7,17 +7,21 @@
 
 ViSP 3.5.1 (under development)
   - Contributors:
-    . Fabien Spindler
+    . Fabien Spindler, Souriya Trinh
   - New features and improvements
     . Video writer is now able to create the output folder recursively (see vpVideoWriter)
     . Introduce Universal Robots support with new vpRobotUniversalRobots class that
       allows to control an UR robot
     . Introduce Vicon and Qualisys motion capture system interfaces in vpMocapVicon and
-      vpMocapQualisys respectively
+      vpMocapQualisys classes respectively
     . Image-based and position-based examples with UR robot
     . Tutorial for extrinsic calibration improved with UR robot and Panda robot use cases
     . Tutorials in tutorial/grabber folder have now a new --no-display command line option
       that allows to grab a video remotely
+    . Introduce MAVLink interface using MavSDK 3rd party library interfaced in vpRobotMavsdk
+      class that allows to control a robot equiped with a Pixhawk
+    . Image-based visual-servoing, position and velocity control examples to control robots
+      equipped with Pixhawk (see vpRobotMavsdk doc)
   - Tutorials
     . New tutorial to list all the hardware (robot, camera, depth camera, lidar, mocap,
       haptic devices, F/T sensor) supported by ViSP
@@ -30,6 +34,8 @@ ViSP 3.5.1 (under development)
       https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-universal-robot-ibvs.html
     . New tutorial: PBVS with a robot from Universal Robots
       https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-universal-robot-pbvs.html
+    . New tutorial: Image-based visual-servoing on a drone equipped with a Pixhawk
+      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-pixhawk-vs.html
   - Bug fixed
     . [#1042] testColorConversion.cpp segfault randomly
     . [#1045] CXX standard not propagated when using pkg-config or visp-config
